include/epanet2_1.h

/********************************************************************

    System Functions

********************************************************************/

  /**
  brief runs a complete EPANET simulation
  param inpFile pointer to name of input file (must exist)
  param rptFile pointer to name of report file (to be created)
  param binOutFile pointer to name of binary output file (to be created)
  param callback a callback function that takes a character string (char *) as its only parameter.
  return error code

  The callback function should reside in and be used by the calling
  code to display the progress messages that EPANET generates
  as it carries out its computations. If this feature is not
  needed then the argument should be NULL.
  */
  int  DLLEXPORT ENepanet(const char *inpFile, const char *rptFile,
                 const char *binOutFile, void (*callback) (char *));
  /**
   @brief Opens EPANET input file & reads in network data
   @param inpFile pointer to name of input file (must exist)
   @param rptFile pointer to name of report file (to be created)
   @param binOutFile pointer to name of binary output file (to be created)
   @return error code
   */
  int  DLLEXPORT ENopen(const char *inpFile, const char *rptFile,
                 const char *binOutFile);
  /**
  @brief Get the API version number.
  @param[out] version The version of EPANET
  @return Error code.

  The version number is to be interpreted with implied decimals, i.e.,
  "20100" == "2(.)01(.)00"
  */
  int  DLLEXPORT ENgetversion(int *version);