include/epanet2.cs

//using System;
using System.Runtime.CompilerServices;
using System.Runtime.InteropServices;

//epanet2.cs[By Oscar Vegas]
//Last updated on 06/23/2024

//Declarations of functions in the EPANET PROGRAMMERs TOOLKIT
//(EPANET2.DLL) for use with C#


namespace EpanetCSharpLibrary
{  
    
    public static class Epanet
    {

        public const string EPANETDLL = "epanet2.dll";

        //These are codes used by the DLL functions
        public const int EN_ELEVATION = 0;    // Node parameters
        public const int EN_BASEDEMAND = 1;
        public const int EN_PATTERN = 2;
        public const int EN_EMITTER = 3;
        public const int EN_INITQUAL = 4;
        public const int EN_SOURCEQUAL = 5;
        public const int EN_SOURCEPAT = 6;
        public const int EN_SOURCETYPE = 7;
        public const int EN_TANKLEVEL = 8;
        public const int EN_DEMAND = 9;
        public const int EN_HEAD = 10;
        public const int EN_PRESSURE = 11;
        public const int EN_QUALITY = 12;
        public const int EN_SOURCEMASS = 13;
        public const int EN_INITVOLUME = 14;
        public const int EN_MIXMODEL = 15;
        public const int EN_MIXZONEVOL = 16;

        public const int EN_TANKDIAM = 17;
        public const int EN_MINVOLUME = 18;
        public const int EN_VOLCURVE = 19;
        public const int EN_MINLEVEL = 20;
        public const int EN_MAXLEVEL = 21;
        public const int EN_MIXFRACTION = 22;
        public const int EN_TANK_KBULK = 23;

        public const int EN_TANKVOLUME = 24;
        public const int EN_MAXVOLUME = 25;
        public const int EN_CANOVERFLOW = 26;
        public const int EN_DEMANDDEFICIT = 27;
        public const int EN_NODE_INCONTROL = 28;
        public const int EN_EMITTERFLOW = 29;
        public const int EN_LEAKAGEFLOW = 30;
        public const int EN_DEMANDFLOW = 31;
        public const int EN_FULLDEMAND = 32;

        public const int EN_DIAMETER = 0;      //Link parameters
        public const int EN_LENGTH = 1;
        public const int EN_ROUGHNESS = 2;
        public const int EN_MINORLOSS = 3;
        public const int EN_INITSTATUS = 4;
        public const int EN_INITSETTING = 5;
        public const int EN_KBULK = 6;
        public const int EN_KWALL = 7;
        public const int EN_FLOW = 8;
        public const int EN_VELOCITY = 9;
        public const int EN_HEADLOSS = 10;
        public const int EN_STATUS = 11;
        public const int EN_SETTING = 12;
        public const int EN_ENERGY = 13;
        public const int EN_LINKQUAL = 14;
        public const int EN_LINKPATTERN = 15;

        public const int EN_PUMP_STATE = 16;
        public const int EN_PUMP_EFFIC = 17;
        public const int EN_PUMP_POWER = 18;
        public const int EN_PUMP_HCURVE = 19;
        public const int EN_PUMP_ECURVE = 20;
        public const int EN_PUMP_ECOST = 21;
        public const int EN_PUMP_EPAT = 22;
        public const int EN_LINK_INCONTROL = 23;
        public const int EN_GPV_CURVE = 24;
        public const int EN_PCV_CURVE = 25;
        public const int EN_LEAK_AREA = 26;
        public const int EN_LEAK_EXPAN = 27;
        public const int EN_LINK_LEAKAGE = 28;

        public const int EN_DURATION = 0;      //Time parameters
        public const int EN_HYDSTEP = 1;
        public const int EN_QUALSTEP = 2;
        public const int EN_PATTERNSTEP = 3;
        public const int EN_PATTERNSTART = 4;
        public const int EN_REPORTSTEP = 5;
        public const int EN_REPORTSTART = 6;
        public const int EN_RULESTEP = 7;
        public const int EN_STATISTIC = 8;
        public const int EN_PERIODS = 9;
        public const int EN_STARTTIME = 10;
        public const int EN_HTIME = 11;
        public const int EN_QTIME = 12;
        public const int EN_HALTFLAG = 13;
        public const int EN_NEXTEVENT = 14;

        public const int EN_ITERATIONS = 0;
        public const int EN_RELATIVEERROR = 1;
        public const int EN_MAXHEADERROR = 2;
        public const int EN_MAXFLOWCHANGE = 3;
        public const int EN_MASSBALANCE = 4;
        public const int EN_DEFICIENTNODES = 5;
        public const int EN_DEMANDREDUCTION = 6;
        public const int EN_LEAKAGELOSS = 7;

        public const int EN_NODE = 0;          //Component types
        public const int EN_LINK = 1;
        public const int EN_TIMEPAT = 2;
        public const int EN_CURVE = 3;
        public const int EN_CONTROL = 4;
        public const int EN_RULE = 5;

        public const int EN_NODECOUNT = 0;     //Component counts
        public const int EN_TANKCOUNT = 1;
        public const int EN_LINKCOUNT = 2;
        public const int EN_PATCOUNT = 3;
        public const int EN_CURVECOUNT = 4;
        public const int EN_CONTROLCOUNT = 5;
        public const int EN_RULECOUNT = 6;

        public const int EN_JUNCTION = 0;      //Node types
        public const int EN_RESERVOIR = 1;
        public const int EN_TANK = 2;

        public const int EN_CVPIPE = 0;        //Link types
        public const int EN_PIPE = 1;
        public const int EN_PUMP = 2;
        public const int EN_PRV = 3;
        public const int EN_PSV = 4;
        public const int EN_PBV = 5;
        public const int EN_FCV = 6;
        public const int EN_TCV = 7;
        public const int EN_GPV = 8;
        public const int EN_PCV = 9;

        public const int EN_NONE = 0;          //Quality analysis types
        public const int EN_CHEM = 1;
        public const int EN_AGE = 2;
        public const int EN_TRACE = 3;

        public const int EN_CONCEN = 0;        //Source quality types
        public const int EN_MASS = 1;
        public const int EN_SETPOINT = 2;
        public const int EN_FLOWPACED = 3;

        public const int EN_HW = 0;            //Head loss formulas
        public const int EN_DW = 1;
        public const int EN_CM = 2;

        public const int EN_CFS = 0;           //Flow units types
        public const int EN_GPM = 1;
        public const int EN_MGD = 2;
        public const int EN_IMGD = 3;
        public const int EN_AFD = 4;
        public const int EN_LPS = 5;
        public const int EN_LPM = 6;
        public const int EN_MLD = 7;
        public const int EN_CMH = 8;
        public const int EN_CMD = 9;
        public const int EN_CMS = 10;

        public const int EN_PSI = 0;           //Pressure units types
        public const int EN_KPA = 1;
        public const int EN_METERS = 2;

        public const int EN_DDA = 0;           //Demand driven analysis
        public const int EN_PDA = 1;           //Pressure driven analysis

        public const int EN_TRIALS = 0;        //Simulation options
        public const int EN_ACCURACY = 1;
        public const int EN_TOLERANCE = 2;
        public const int EN_EMITEXPON = 3;
        public const int EN_DEMANDMULT = 4;
        public const int EN_HEADERROR = 5;
        public const int EN_FLOWCHANGE = 6;
        public const int EN_HEADLOSSFORM = 7;
        public const int EN_GLOBALEFFIC = 8;
        public const int EN_GLOBALPRICE = 9;
        public const int EN_GLOBALPATTERN = 10;
        public const int EN_DEMANDCHARGE = 11;
        public const int EN_SP_GRAVITY = 12;
        public const int EN_SP_VISCOS  = 13;
        public const int EN_UNBALANCED = 14;
        public const int EN_CHECKFREQ = 15;
        public const int EN_MAXCHECK = 16;
        public const int EN_DAMPLIMIT = 17;
        public const int EN_SP_DIFFUS = 18;
        public const int EN_BULKORDER = 19;
        public const int EN_WALLORDER = 20;
        public const int EN_TANKORDER = 21;
        public const int EN_CONCENLIMIT = 22;
        public const int EN_DEMANDPATTERN = 23;
        public const int EN_EMITBACKFLOW = 24;
        public const int EN_PRESS_UNITS = 25;
        public const int EN_STATUS_REPORT = 26;

        public const int EN_LOWLEVEL = 0;      //Control types
        public const int EN_HILEVEL = 1;
        public const int EN_TIMER = 2;
        public const int EN_TIMEOFDAY = 3;

        public const int EN_AVERAGE = 1;       //Time statistic types
        public const int EN_MINIMUM = 2;
        public const int EN_MAXIMUM = 3;
        public const int EN_RANGE = 4;

        public const int EN_MIX1 = 0;          //Tank mixing models
        public const int EN_MIX2 = 1;
        public const int EN_FIFO = 2;
        public const int EN_LIFO = 3;

        public const int EN_NOSAVE = 0;        //Save-results-to-file flag
        public const int EN_SAVE = 1;
        public const int EN_INITFLOW = 10;     //Re-initialize flow flag
        public const int EN_SAVE_AND_INIT = 11;

        public const int EN_CONST_HP = 0;      //Constant horsepower pump curve
        public const int EN_POWER_FUNC = 1;    //Power function pump curve
        public const int EN_CUSTOM = 2;        //User-defined custom pump curve
        public const int EN_NOCURVE = 3;       //No pump curve

        public const int EN_VOLUME_CURVE = 0;  //Volume curve
        public const int EN_PUMP_CURVE = 1;    //Pump curve
        public const int EN_EFFIC_CURVE = 2;   //Efficiency curve
        public const int EN_HLOSS_CURVE = 3;   //Head loss curve
        public const int EN_GENERIC_CURVE = 4; //Generic curve
        public const int EN_VALVE_CURVE = 5;   //Valve position curve

        public const int EN_UNCONDITIONAL = 0; //Unconditional object deletion
        public const int EN_CONDITIONAL   = 1; //Conditional object deletion

        public const int EN_NO_REPORT = 0;     //No status report
        public const int EN_NORMAL_REPORT = 1; //Normal status report
        public const int EN_FULL_REPORT = 2;   //Full status report

        public const int EN_R_NODE   = 6;      //Rule objects
        public const int EN_R_LINK   = 7;
        public const int EN_R_SYSTEM = 8;

        public const int EN_R_DEMAND    = 0;   //Rule variables
        public const int EN_R_HEAD      = 1;
        public const int EN_R_GRADE     = 2;
        public const int EN_R_LEVEL     = 3;
        public const int EN_R_PRESSURE  = 4;
        public const int EN_R_FLOW      = 5;
        public const int EN_R_STATUS    = 6;
        public const int EN_R_SETTING   = 7;
        public const int EN_R_POWER     = 8;
        public const int EN_R_TIME      = 9;
        public const int EN_R_CLOCKTIME = 10;
        public const int EN_R_FILLTIME  = 11;
        public const int EN_R_DRAINTIME = 12;

        public const int EN_R_EQ    = 0;       //Rule operators
        public const int EN_R_NE    = 1;
        public const int EN_R_LE    = 2;
        public const int EN_R_GE    = 3;
        public const int EN_R_LT    = 4;
        public const int EN_R_GT    = 5;
        public const int EN_R_IS    = 6;
        public const int EN_R_NOT   = 7;
        public const int EN_R_BELOW = 8;
        public const int EN_R_ABOVE = 9;

        public const int EN_R_IS_OPEN   = 1;   //Rule status types
        public const int EN_R_IS_CLOSED = 2;
        public const int EN_R_IS_ACTIVE = 3;

        public const double EN_MISSING = -1.0E10;
        public const double EN_SET_CLOSED = -1.0E10
        public const double EN_SET_OPEN = 1.0E10
        
        public const int EN_FALSE = 0   // boolean false
        public const int EN_TRUE  = 1   // boolean true

        #region Epanet Imports

        public delegate void UserSuppliedFunction(string param0);


        //Project Functions
        [DllImport(EPANETDLL, EntryPoint = "ENgetversion")]
        public static extern int ENgetversion(ref int version);

        [DllImport(EPANETDLL, EntryPoint = "ENepanet")]
        public static extern int ENepanet(string inpFile, string rptFile, string outFile, UserSuppliedFunction vfunc);

        [DllImport(EPANETDLL, EntryPoint = "ENopen")]
        public static extern int ENopen(string inpFile, string rptFile, string outFile);
